RESOLVED FIXED17306
Transitions between styles that have different transition-* properties behave inconsistently
https://bugs.webkit.org/show_bug.cgi?id=17306
Summary Transitions between styles that have different transition-* properties behave...
mitz
Reported 2008-02-10 23:07:21 PST
Transitions between styles that have different transition properties behave inconsistently: the transitioning properties, the durations and the timing functions are determined by the first target style that specifies a transition, and remain in effect for all subsequent transitions regardless of what they specify. The exception is transitions to a style that does not specify transitions, which resets everything. The attached test case describes the expected behavior according to the rule that the "from" style determines the transition properties. That rule is my interpretation of the proposed spec. However it might make more sense for the "target" style to determine the transition. The latter rule is also a little easier to implement.
Attachments
Test case (1.99 KB, text/html)
2008-02-10 23:07 PST, mitz
no flags
Patch, including tedious manual test (7.08 KB, patch)
2008-02-13 18:38 PST, mitz
hyatt: review+
mitz
Comment 1 2008-02-10 23:07:49 PST
Created attachment 19058 [details] Test case
mitz
Comment 2 2008-02-12 10:53:19 PST
mitz
Comment 3 2008-02-13 18:38:37 PST
Created attachment 19117 [details] Patch, including tedious manual test
Dave Hyatt
Comment 4 2008-02-15 12:04:06 PST
Comment on attachment 19117 [details] Patch, including tedious manual test r=me
mitz
Comment 5 2008-02-15 13:09:02 PST
Note You need to log in before you can comment on or make changes to this bug.